# applepassgenerator

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_modification.md  enhancement.md  feature_request.md
.github/workflows/: build.yml  publish.yml
changelog/: index.html
docs/: changelog.md  index.md
search/: search_index.json
src/applepassgenerator/: __init__.py  client.py  models.py
tests/: test_version.py
